--- a/project-setup/index.html
+++ b/project-setup/index.html
@@ -1,12 +1,274 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./styles/index.css"
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
+    <style>
+        .material-symbols-outlined {
+            font-variation-settithree-animationngs:
+                'FILL'0,
+                'wght'400,
+                'GRAD'0,
+                'opsz'24
+        }
+    </style>
 </head>
+
 <body>
-    
+    <div class="main-heading">
+        <div class="icons">
+            <span class="material-symbols-outlined">
+                menu
+            </span>
+            </span>
+            <span class="material-symbols-outlined">
+
+            </span>
+        </div>
+        <section class="section-one">
+            <div class="header">
+                <nav>
+                    <div class="home"><a href="home">home</a></div>
+                    <div class="about"><a href="about">about</a></div>
+                    <div class="services"><a href="services">services</a></div>
+                    <div class="pricing"><a href="pricing">pricing</a></div>
+                    <div class="contact"><a href="contact">pricing</a></div>
+                    <div class="*portfolio"><a href="portfolio">portfolio</a></div>
+                </nav>
+            </div>
+            <div class="body-one">
+                <div class="heading-one">
+                    <h3>WE DONT MAKE ANIMATION. WE MAKE ANIMATION BETTER</h3>
+                </div>
+                <div class="paragraph-one">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel molestiae suscipit assumenda nisi
+                        maxime</p>
+                </div>
+                <button class="button-one" type="button">get started</button>
+            </div>
+    </div>
+    </section>
+    <section class="section-two">
+        <div class="body-two">
+            <div style="color: blue;">WHO WE ARE</div>
+            <div class="Pharagraph-two">
+                <h3><b>let Your Animation Do The Walking.</b></h3>
+            </div>
+            <p style="font-size: 0.7rem;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos expedita sequi
+                dolor tenetur magni
+                voluptatum, similique eum et Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur illum
+                harum nostrum, porro nemo reprehenderit, minima, vitae vero quas fugit iure. Natus </p>
+            <div class="button-two"><button type="button">discover more</button></div>
+        </div>
+        <div class="image-one"><img src="./images/image-two.jpg" alt="image"></div>
+        <div class="sponsors"></div>
+    </section>
+    <div class="sponsor">
+        <div class="logo-one"><img src="./images/amazon.jpeg" alt="amazon"></div>
+        <div class="logo-two"><img src="./images/Badan_Informasi_logo.png" alt="badan"></div>
+        <div class="logo-three"><img src="./images/Blender_.png" alt="blender"></div>
+        <div class="logo-four"><img src="./images/disney.jpg" alt="disney"></div>
+        <div class="logo-five"><img src="./images/facebook.png" alt="facebook"></div>
+    </div>
+    <div class="section-three">
+        <div class="heading-two">
+            <div class="another">
+                <h3>Animation is not a genre, but the act of making inanimate object move</h3>
+            </div>
+            <div class="pharagraph-four">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis
+                </p>
+            </div>
+            <div class="botton-three"><button type="button">Discover more</button></div>
+        </div>
+    </div>
+    <div class="section-four">
+        <div class="one">
+            <div class="number-one">425+</div>
+            project Done
+        </div>
+        <div class="one">
+            <div class="number-two">371+</div>
+            Happy client
+        </div>
+        <div class="one">
+            <div class="number-three">25+</div>
+            years Experience
+        </div>
+    </div>
+    <div class="section-five">
+        <div class="heading-three">
+            <h3>Animation For People Who Want More</h3>
+        </div>
+        <div class="paragraph-three">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat neque quia atque voluptas molestia</p>
+        </div>
+        <div class="botton-four"><button type="button">Discover more</button></div>
+        <div class="three-animation">
+            <div class="icons-one"><img src="./images/3D animation.png" alt="icon"></div>
+            <div class="heading-ani">
+                <h3>3D Animations</h3>
+            </div>
+            <p>Lorem, ipsum dolor soluta, itaque vero iure illum tenetur veritatis praesentium, </p>
+            <div class="botton-three"><button type="button">Discover more</button></div>
+        </div>
+        <div class="two-animation">
+            <div class="icons-two"><img src="./images/2D animations.png" alt="icon"></div>
+            <div class="heading-ani-one">
+                <h3>2D Animations</h3>
+            </div>
+            <p>Lorem, ipsum dolor soluta, itaque vero iure illum tenetur veritatis praesentium, </p>
+            <div class="botton-three"><button type="button">Discover more</button></div>
+        </div>
+        <div class="branded">
+            <div class="icon-three"><img src="./images/banded.png" alt="icon"></div>
+            <div class="heading-ani-two">
+                <h3>Branded Digital Branded</h3>
+            </div>
+            <p> error ipsam repudiandae, voluptates, debitis sapiente illo voluptate iure?</p>
+            <div class="button-three"><button type="button">get started</button></div>
+        </div>
+        <div class="ads-video">
+            <div class="icon-four"><img src="./images/ads video.png" alt="icon"></div>
+            <div class="heading-ani-three">
+                <h3>ads video Animations</h3>
+            </div>
+            <p> error ipsam repudiandae, voluptates, debitis sapiente illo voluptate iure?</p>
+            <div class="button"><button type="button">get started</button></div>
+        </div>
+        <div class="production">
+            <div class="icon-five"><img src="./images/filme.png" alt="icons"></div>
+            <div class="heading-ani-four">
+                <h3>Product and Agencies</h3>
+            </div>
+            <p> error ipsam repudiandae, voluptates, debitis sapiente illo voluptate iure?</p>
+            <div class="button"><button type="button">get started</button></div>
+        </div>
+        <div class="movies">
+            <div class="icon-six"><img src="./images/movie.png" alt="icon"></div>
+            <div class="heading-ani-five">
+                <h3>Movies</h3>
+            </div>
+            <p> error ipsam repudiandae, voluptates, debitis sapiente illo voluptate iure?</p>
+            <div class="button"><button type="button">get started</button></div>
+        </div>
+    </div>
+    <div class="section-six">
+        <div class="you-will">
+            <div class="other-icons">
+                <div class="icon-head">
+                    <div class="why" style="color: #b7b918;">Why choose us</div>
+                    <div class="icon-heading">
+                        <h2>You'll never have to worry about animations anymore.</h2>
+                        <p>error ipsam repudiandae, voluptates, debitis sapiente illo voluptate iure</p>
+                    </div>
+                </div>
+                <div class="premuim-icon">
+                    <div class="premuim"><img src="./images/premium-quality yellow.png" alt="icons"></div>
+                    <div class="premium-head">
+                        <h3>Premium quality animation</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi at ad iusto nam magnam minima sed, suscipit totam quia ?</p>
+                    </div>
+                </div>
+                <div class="creative-icon">
+                    <div class="creative"><img src="./images/creative-team yellow.png" alt="icons"></div>
+                    <div class="creative-head">
+                        <h3>creative team</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi at ad iusto nam magnam minima sed, suscipit totam quia ?</p>
+                    </div>
+                </image-fivediv>
+                <div class="headset-icon">
+                    <div class="headset"><img src="./images/headphone yellow.png" alt="icons"></div>
+                    <div class="headset-head">
+                        <h3>24/7 Premuim Support</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi at ad iusto nam magnam minima sed, suscipit totam quia ?</p>
+                    </div>
+                </div>
+            </div>
+            <div class="whatt"><img src="./images/image-three.jpg" alt="image"></div>
+        </div>
+    </div>
+    <div class="easy-steps">
+        <div class="easy-step-header"><h2>Easy Steps To order</h2></div>
+        <div class="image-five"><img src="./images/image-four.jpg" alt="image"></div>
+        <div class="easy-step-head">
+            <div class="easysteps-boxes">
+                <div class="consultation">
+                    <div class="consultation-icon"><img src="./images/comment.png" alt="image"></div>
+                    <div class="consultation-body">
+                        <h3>Consultation</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi at ad iusto na</p>
+                        <div class="button"><button type="button">chat now</button></div>
+                    </div>
+                </div>
+                <div class="package">
+                    <div class="package-icon"><img src="./images/choices.png" alt="image"></div>
+                    <div class="package-body">
+                        <h3>
+                            Choose Package</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi at ad iusto na</p>
+                        <div class="button"><button type="button">order now </button></div>
+                    </div>
+                </div>
+                <div class="productions">
+                    <div class="productions-icon"><img src="./images/box.png" alt="image"></div>
+                    <div class="productions-body">
+                        <h3>Productions</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi at ad iusto na</p>
+                        <div class="button"><button type="button">get report</button></div>
+                    </div>
+                </div>
+                <div class="file">
+                    <div class="file-icon"><img src="./images/communication.png" alt="image"></div>
+                    <div class="file-body">
+                        <h3>Send File Order</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi at ad iusto na</p>
+                        <div class="button"><button type="button">contact us</button></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="make-world">
+        <div class="makeWorld-heading">
+            <h2>Male The World A Better Place With Animation.</h2>
+        </div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi at ad iusto na my fnsa is the man on</p>
+        <div class="button"><button type="button">contact us</button></div>
+    </div>
+    <div class="other-boxes">
+        <div class="customer">
+            <div class="customer-icon"><img src="./images/customer-service-headset.png" alt="image"></div>
+            <div class="customer-body">
+                <h3>Customer Support</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi at ad iusto na</p>
+                <div class="button"><button type="button">contact us</button></div>
+            </div>
+        </div>
+        <div class="ticket">
+            <div class="ticket-icon"><img src="./images/verified-massage.png" alt="image"></div>
+            <div class="ticket-body">
+                <h3>ticket Support</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi at ad iusto na</p>
+                <div class="button"><button type="button">contact us</button></div>
+            </div>
+        </div>
+        <div class="article">
+            <div class="article-icon"><img src="./images/reading-book.png" alt="image"></div>
+            <div class="article-body">
+                <h3>Read article</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi at ad iusto na</p>
+                <div class="button"><button type="button">contact us</button></div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
