--- a/index.html
+++ b/index.html
@@ -19,10 +19,17 @@
                 'opsz'24
         }
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="main-heading">
+        <div class="logo-head">
+          <div class="main-logo"><img src="./images/mainlogo.png" alt="image"></div>
+          <div class="animakit">Animakit</div>
+       </div>
         <div class="icons">
             <span class="material-symbols-outlined">
                 menu
@@ -266,6 +273,38 @@
                 <h3>Read article</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi at ad iusto na</p>
                 <div class="button"><button type="button">contact us</button></div>
+            </div>
+        </div>
+        <div class="testimony"><h3>testimony</h3></div>
+        <div class="image-six">
+            <img src="./images/image -.webp" alt="image">
+            <div class="about-us">
+                <div class="aboutus-header"><h2>What people say about us</h2></div>
+                <img src="./images/mainlogo.png" alt="image">
+            </div>
+        </div>
+        <div class="says">
+            <div class="say-one">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor suscipit repellat magnam sapiente ducimus blanditiis, nostrum 
+                 eius recusandae dolorem cupiditate vitae at, voluptatum corporis provident.</p>
+                 <div class="profile-one">
+                     <div class="profile-pic"><img src="./images/profile-one.jpg" alt="profile"></div>
+                     <div class="profile-id">
+                         <h4>Alejandra Stone</h4>
+                         <p>Lokamark Manager</p>
+                     </div>
+                 </div>
+            </div>
+            <div class="say-two">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor suscipit repellat magnam sapiente ducimus blanditiis, nostrum 
+                    eius recusandae dolorem cupiditate vitae at, voluptatum corporis provident.</p>
+                    <div class="profile-two">
+                        <div class="profile-pic"><img src="./images/profile-two.webp" alt="profile"></div>
+                        <div class="profile-id-two">
+                            <h4>rebecca hayes</h4>
+                            <p>Lokamark Manager</p>
+                        </div>
+                    </div>
             </div>
         </div>
     </div>
