--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section class="section-two">
         <div class="body-two">
             <div style="color: blue;">WHO WE ARE</div>
-            <div class="Pharagraph-two">
+            <div class="pharagraph-two">
                 <h3><b>let Your Animation Do The Walking.</b></h3>
             </div>
             <p style="font-size: 0.7rem;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos expedita sequi
