--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
             </span>
             </span>
             <span class="material-symbols-outlined">
-
             </span>
         </div>
         <section class="section-one">
@@ -60,8 +59,8 @@
                 </div>
                 <button class="button-one" type="button">get started</button>
             </div>
+        </section>
     </div>
-    </section>
     <section class="section-two">
         <div class="body-two">
             <div style="color: blue;">WHO WE ARE</div>
@@ -190,7 +189,7 @@
                         <h3>creative team</h3>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi at ad iusto nam magnam minima sed, suscipit totam quia ?</p>
                     </div>
-                </image-fivediv>
+                </div>
                 <div class="headset-icon">
                     <div class="headset"><img src="./images/headphone yellow.png" alt="icons"></div>
                     <div class="headset-head">
@@ -244,8 +243,8 @@
         </div>
     </div>
     <div class="make-world">
-        <div class="makeWorld-heading">
-            <h2>Male The World A Better Place With Animation.</h2>
+        <div class="makeworld-heading">
+            <h2>Make The World A Better Place With Animation.</h2>
         </div>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi at ad iusto na my fnsa is the man on</p>
         <div class="button"><button type="button">contact us</button></div>
@@ -309,5 +308,4 @@
         </div>
     </div>
 </body>
-
 </html>
