--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
             <span class="material-symbols-outlined">
                 menu
             </span>
-            </span>
             <span class="material-symbols-outlined">
             </span>
         </div>
@@ -46,7 +45,7 @@
                     <div class="services"><a href="services">services</a></div>
                     <div class="pricing"><a href="pricing">pricing</a></div>
                     <div class="contact"><a href="contact">pricing</a></div>
-                    <div class="*portfolio"><a href="portfolio">portfolio</a></div>
+                    <div class="portfolio"><a href="portfolio">portfolio</a></div>
                 </nav>
             </div>
             <div class="body-one">
