--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <div class="heading-ani">
                 <h3>3D Animations</h3>
             </div>
-            <p>Lorem, ipsum dolor soluta, itaque vero iure illum tenetur veritatis praesentium, </p>
+            <p>Tur solvendae ego archetypi hoc attentius. At potestque ii extitisse in ingeniosi contingit. Partibus vis diversas pauciora actualis vox  </p>
             <div class="botton-three"><button type="button">Discover more</button></div>
         </div>
         <div class="two-animation">
@@ -129,7 +129,9 @@
             <div class="heading-ani-one">
                 <h3>2D Animations</h3>
             </div>
-            <p>Lorem, ipsum dolor soluta, itaque vero iure illum tenetur veritatis praesentium, </p>
+            <p>
+                Sit, ipsam optio quisquam hic tenetur eligendi dolor ratione provident consequatur praesentium deserunt dolorem quidem voluptate, cumque numquam minima, officiis a vel?
+            </p>
             <div class="botton-three"><button type="button">Discover more</button></div>
         </div>
         <div class="branded">
@@ -143,7 +145,7 @@
         <div class="ads-video">
             <div class="icon-four"><img src="./images/ads video.png" alt="icon"></div>
             <div class="heading-ani-three">
-                <h3>ads video Animations</h3>
+                <h3>Ads video Animations</h3>
             </div>
             <p> error ipsam repudiandae, voluptates, debitis sapiente illo voluptate iure?</p>
             <div class="button"><button type="button">get started</button></div>
@@ -234,8 +236,10 @@
                     <div class="file-icon"><img src="./images/communication.png" alt="image"></div>
                     <div class="file-body">
                         <h3>Send File Order</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi at ad iusto na</p>
-                        <div class="button"><button type="button">contact us</button></div>
+                        <p>Judicio non ejusdem referam hoc. Audiam debeat per infixa durent ibi mentem. Si ut mali ei duce im esto fert apta. </p>
+                        <div class="button">
+                            <button type="button">contact us</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -245,7 +249,7 @@
         <div class="makeworld-heading">
             <h2>Make The World A Better Place With Animation.</h2>
         </div>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi at ad iusto na my fnsa is the man on</p>
+        <p>Tur solvendae ego archetypi hoc attentius. At potestque ii extitisse in ingeniosi contingit. Partibus vis diversas pauciora actualis vox imo agi. </p>
         <div class="button"><button type="button">contact us</button></div>
     </div>
     <div class="other-boxes">
@@ -253,12 +257,14 @@
             <div class="customer-icon"><img src="./images/customer-service-headset.png" alt="image"></div>
             <div class="customer-body">
                 <h3>Customer Support</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi at ad iusto na</p>
+                <p> Ex solere vixque florum de stupor procul optime ii. Alio scio im solo mo ei fiat to.</p>
                 <div class="button"><button type="button">contact us</button></div>
             </div>
         </div>
         <div class="ticket">
-            <div class="ticket-icon"><img src="./images/verified-massage.png" alt="image"></div>
+            <div class="ticket-icon">
+                <img src="./images/verified-massage.png" alt="image">
+            </div>
             <div class="ticket-body">
                 <h3>ticket Support</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi at ad iusto na</p>
@@ -269,7 +275,7 @@
             <div class="article-icon"><img src="./images/reading-book.png" alt="image"></div>
             <div class="article-body">
                 <h3>Read article</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi at ad iusto na</p>
+                <p>Im ad aequare diverso mirabar dignati alienum praemia in. Inscitiae veritatis</p>
                 <div class="button"><button type="button">contact us</button></div>
             </div>
         </div>
