--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="heading-ani-three">
                 <h3>Ads video Animations</h3>
             </div>
-            <p> error ipsam repudiandae, voluptates, debitis sapiente illo voluptate iure?</p>
+            <p>Producatur se substantia quaestione de. Illi ei data mo quae. Persuadere invenerunt se </p>
             <div class="button"><button type="button">get started</button></div>
         </div>
         <div class="production">
@@ -155,16 +155,16 @@
             <div class="heading-ani-four">
                 <h3>Product and Agencies</h3>
             </div>
-            <p> error ipsam repudiandae, voluptates, debitis sapiente illo voluptate iure?</p>
-            <div class="button"><button type="button">get started</button></div>
+            <p> Tur solvendae ego archetypi hoc attentius. At potestque ii extitisse in ingeniosi</p>
+            <div class="button btn"><button type="button">get started</button></div>
         </div>
         <div class="movies">
             <div class="icon-six"><img src="./images/movie.png" alt="icon"></div>
             <div class="heading-ani-five">
                 <h3>Movies</h3>
             </div>
-            <p> error ipsam repudiandae, voluptates, debitis sapiente illo voluptate iure?</p>
-            <div class="button"><button type="button">get started</button></div>
+            <p> Partibus vis diversas pauciora actualis vox imo agi. Efficta nec quaedam capacem ita invenit hae cum.</p>
+            <div class="button cta"><button type="button">get started</button></div>
         </div>
     </div>
     <div class="section-six">
@@ -250,7 +250,7 @@
             <h2>Make The World A Better Place With Animation.</h2>
         </div>
         <p>Tur solvendae ego archetypi hoc attentius. At potestque ii extitisse in ingeniosi contingit. Partibus vis diversas pauciora actualis vox imo agi. </p>
-        <div class="button"><button type="button">contact us</button></div>
+        <div class="button cta"><button type="button">contact us</button></div>
     </div>
     <div class="other-boxes">
         <div class="customer">
@@ -258,7 +258,7 @@
             <div class="customer-body">
                 <h3>Customer Support</h3>
                 <p> Ex solere vixque florum de stupor procul optime ii. Alio scio im solo mo ei fiat to.</p>
-                <div class="button"><button type="button">contact us</button></div>
+                <div class="button btn"><button type="button">contact us</button></div>
             </div>
         </div>
         <div class="ticket">
